[Converter] better default-method handling
* default Method could return null
* Exceptions in default methods re-throw as ConverterException
* do not ignote explicit given null
* handle default value if property is missing

Signed-off-by: Stefan Bischof <stbischof@bipolis.org>